Fix how buttons look on iOS

--- a/frontend/src/components/MatchRowButtons.scss
+++ b/frontend/src/components/MatchRowButtons.scss
@@ -1,7 +1,11 @@
 .buttons {
   button {
     font-size: 13px;
-    padding: 0 2px;
+    -webkit-appearance: none;
+    background-color: #ddd;
+    border-radius: 3px;
+    border: 1px solid #000;
+    padding: 3px 5px;
 
     &:last-child {
       margin-left: 5px;
